// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-toggle allows for disable 1`] = `
<ld-toggle class="ld-toggle ld-toggle--small" disabled="">
  <input disabled="" type="checkbox">
  <span class="ld-toggle__knob"></span>
</ld-toggle>
`;

exports[`ld-toggle does not prevent input value changes without an aria-disabled attribute 1`] = `
<ld-toggle checked="" class="ld-toggle ld-toggle--small">
  <input checked="" type="checkbox">
  <span class="ld-toggle__knob"></span>
</ld-toggle>
`;

exports[`ld-toggle prevents input value changes with an aria-disabled attribute 1`] = `
<ld-toggle aria-disabled="true" class="ld-toggle ld-toggle--small">
  <input aria-disabled="true" type="checkbox">
  <span class="ld-toggle__knob"></span>
</ld-toggle>
`;

exports[`ld-toggle renders correctly 1`] = `
<ld-toggle class="ld-toggle ld-toggle--small">
  <input type="checkbox">
  <span class="ld-toggle__knob"></span>
</ld-toggle>
`;

exports[`ld-toggle updates checked prop on checked value change 1`] = `
<ld-toggle checked="" class="ld-toggle ld-toggle--small">
  <input checked="" type="checkbox">
  <span class="ld-toggle__knob"></span>
</ld-toggle>
`;
